@@ -1,3 +1,9 @@
+2009-08-30  okkez  <okkez000@gmail.com>
+
+	* hiki/util.rb (Hiki::Util): dead copy from Ruby 1.8 cgi.rb.
+	Hiki::Util#escape, Hiki::Util#unescape, Hiki::Util#unescapeHTML,
+	Hiki::Util#escapeHTML.
+
 2009-08-28  okkez  <okkez000@gmail.com>
 
 	* hiki/config.rb (Hiki::Config#initialize): improved performance.
